move GET request param from body to query
