# src/main/java/io/swagger/api/AvailablilityApiController.java
@@ -1,7 +1,7 @@
 package io.swagger.api;
 
-import io.swagger.model.AvailablilityRequest;
 import io.swagger.model.AvailablilityResponse;
+import org.threeten.bp.OffsetDateTime;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.swagger.annotations.*;
 import org.slf4j.Logger;
@@ -21,7 +21,7 @@ import javax.validation.Valid;
 import javax.servlet.http.HttpServletRequest;
 import java.io.IOException;
 import java.util.List;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-02-02T00:53:10.389-08:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-02-02T11:14:42.902-08:00")
 
 @Controller
 public class AvailablilityApiController implements AvailablilityApi {
@@ -38,7 +38,7 @@ public class AvailablilityApiController implements AvailablilityApi {
         this.request = request;
     }
 
-    public ResponseEntity<AvailablilityResponse> availablilityGet(@ApiParam(value = "" ,required=true )  @Valid @RequestBody AvailablilityRequest body) {
+    public ResponseEntity<AvailablilityResponse> availablilityGet(@NotNull @ApiParam(value = "", required = true) @Valid @RequestParam(value = "merchantId", required = true) String merchantId,@NotNull @ApiParam(value = "", required = true) @Valid @RequestParam(value = "serviceId", required = true) String serviceId,@ApiParam(value = "") @Valid @RequestParam(value = "startTime", required = false) OffsetDateTime startTime) {
         String accept = request.getHeader("Accept");
         if (accept != null && accept.contains("application/json")) {
             try {
