# swagger.yaml
@@ -1,69 +1,76 @@
-swagger: "2.0"
+swagger: '2.0'
 info:
-  description: ""
-  version: "1.0"
-  title: "Booking API"
-basePath: "/"
+  description: ''
+  version: '1.0'
+  title: Booking API
+basePath: /
 schemes:
-  - "https"
+  - https
 paths:
   /availablility:
     get:
       consumes:
-        - "application/json"
+        - application/json
       produces:
-        - "application/json"
+        - application/json
       parameters:
-        - in: "body"
-          name: "body"
-          description: ""
+        - in: query
+          name: "merchantId"
+          type: "string"
+          description: ''
           required: true
-          schema:
-            $ref: "#/definitions/availablilityRequest"
+        - in: query
+          name: "serviceId"
+          type: "string"
+          required: true
+          description: ""
+        - in: query
+          name: "startTime"
+          type: "string"
+          format: "date-time"
+          description: ""
       responses:
-        200:
-          description: "successful operation"
+        '200':
+          description: successful operation
           schema:
-            $ref: "#/definitions/availablilityResponse"
+            $ref: '#/definitions/availablilityResponse'
   /booking:
     post:
-      consumes: 
-        - "application/json"
-      produces: 
-        - "application/json"
-      parameters: 
-        - in: "body"
-          name: "body"
-          description: ""
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: ''
           required: true
-          schema: 
-            $ref: "#/definitions/bookingRequest"
-      responses:
-        200:
-          description: "successful operation"
           schema:
-            $ref: "#/definitions/bookingResponse"
-
+            $ref: '#/definitions/bookingRequest'
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/bookingResponse'
 definitions:
   serviceTimeSlot:
-    type: "object"
-    required: 
+    type: object
+    required:
       - merchantId
       - serviceId
       - start_time
     properties:
-      merchantId: 
-        type: "string"
+      merchantId:
+        type: string
       serviceId:
-        type: "string"
+        type: string
       start_time:
-        type: "string"
-        format: "date-time"
-      duration: 
-        type: "integer"
-        
+        type: string
+        format: date-time
+      duration:
+        type: integer
   user:
-    type: "object"
+    type: object
     required:
       - firstName
       - lastName
@@ -71,57 +78,53 @@ definitions:
       - email
     properties:
       firstName:
-        type: "string"
+        type: string
       lastName:
-        type: "string"
+        type: string
       phoneNumber:
-        type: "string"
+        type: string
       email:
-        type: "string"
-        
+        type: string
   bookingRequest:
-    type: "object"
-    required: 
+    type: object
+    required:
       - user
       - timeSlot
     properties:
       user:
-        $ref: "#/definitions/user"
+        $ref: '#/definitions/user'
       timeSlot:
-        $ref: "#/definitions/serviceTimeSlot"
+        $ref: '#/definitions/serviceTimeSlot'
       notes:
-        type: "string"
-  
+        type: string
   bookingResponse:
-    type: "object"
-    required: 
+    type: object
+    required:
       - status
     properties:
       status:
-        type: "string"
-        enum: 
-        - "booked"
-        - "failed"
+        type: string
+        enum:
+          - booked
+          - failed
       merchantPhoneNumber:
-        type: "string"
+        type: string
       confirmationId:
-        type: "string"
+        type: string
       failureMessage:
-        type: "string"
-  
+        type: string
   availablilityRequest:
-    type: "object"
-    required: 
+    type: object
+    required:
       - timeSlot
     properties:
-      timeSlot: 
-        $ref: "#/definitions/serviceTimeSlot"
-        
+      timeSlot:
+        $ref: '#/definitions/serviceTimeSlot'
   availablilityResponse:
-    type: "object"
+    type: object
     properties:
       availability:
-        type: "string"
-        enum: 
-        - "available"
-        - "unavailable"
+        type: string
+        enum:
+          - available
+          - unavailable
